# mpas_external_project

./: CMakeLists.txt  main.f90
cmake/Modules/: FindPnetCDF.cmake
